src/test/ui/suggestions/type-ascription-instead-of-method.stderr
error: struct literal body
  --> $DIR/type-ascription-instead-of-method.rs:1:11
   |
LL |   fn main() {
   |  ___________^
LL | |     Box:new("foo".to_string())
LL | |
LL | | }
   | |_^
   |
help: provide the struct literal name before the body
   |
LL | fn main() { Name {
LL |     Box:new("foo".to_string())
LL |
LL | } }
   |

error: expected item, found `}`
  --> $DIR/type-ascription-instead-of-method.rs:4:1
   |
LL | }
   | ^ expected item

error: aborting due to 2 previous errors

